@@ -668,6 +668,8 @@ def test_imported_article_has_special_meta_robots(
     # test ZEAR
     monkeypatch.setattr(
         zeit.web.site.view_article.Article, u'product_id', u'ZEAR')
+    monkeypatch.setattr(
+        zeit.web.site.view_article.Article, u'ressort', u'Fehler')
     article_view = zeit.web.site.view_article.Article(context, mock.Mock())
     assert article_view.meta_robots == 'noindex,follow', (
         'wrong robots for ZEAR')
@@ -713,24 +715,3 @@ def test_imported_article_has_special_meta_robots(
     article_view = zeit.web.site.view_article.Article(context, mock.Mock())
     assert article_view.meta_robots == 'index,follow,noodp,noydir,noarchive', (
         'wrong robots for none product article')
-
-
-def test_article_of_ressort_fehler_has_special_meta_robots(
-        application, monkeypatch):
-
-    context = zeit.cms.interfaces.ICMSContent(
-        'http://xml.zeit.de/zeit-online/article/01')
-
-    # test ressort Fehler
-    monkeypatch.setattr(
-        zeit.web.site.view_article.Article, u'ressort', u'Fehler')
-    article_view = zeit.web.site.view_article.Article(context, mock.Mock())
-    assert article_view.meta_robots == 'noindex,follow', (
-        'wrong robots for fehler ressort')
-
-    # test any other ressort
-    monkeypatch.setattr(
-        zeit.web.site.view_article.Article, u'ressort', u'Politik')
-    article_view = zeit.web.site.view_article.Article(context, mock.Mock())
-    assert article_view.meta_robots == 'index,follow,noodp,noydir,noarchive', (
-        'wrong robots for any other ressort')
