@@ -68,10 +68,11 @@ class Article(zeit.web.core.view_article.Article, zeit.web.site.view.Base):
             return self.seo_robot_override
 
         # Exclude certain products and ressorts from being followed
-        exclude_products = ('ZEAR', 'TGS', 'HaBl', 'WIWO', 'GOLEM')
+        exclude_products = ('TGS', 'HaBl', 'WIWO', 'GOLEM')
 
-        if self.product_id in exclude_products or self.ressort == 'Fehler':
-            return 'noindex,follow'
+        if self.product_id in exclude_products or (
+                self.ressort == 'Fehler' and self.product_id == 'ZEAR'):
+                return 'noindex,follow'
         else:
             return 'index,follow,noodp,noydir,noarchive'
 
